@@ -20,6 +20,7 @@
 #include <unistd.h>
 
 #include <errno.h>
+#include <stdlib.h>
 #include <string.h>
 
 #if GNULIB_GETCWD
